--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Daily Consumption</string>
     <string name="medicineName"><![CDATA[Select Medicine & Surgical Item]]></string>
+    <string name="Update">Check Updates</string>
+    <string name="updateNow">Update Now</string>
 </resources>
